[package]
name = "colortemp"
edition = "2024"
description = "Simple functions to calculate color temperatures and RGB values"
version = "0.1.1"
license = "MIT/X11"
authors = ["Katharina Fey <kookie@spacekookie.de>", 
"George Sanger <paperclipstudio@gmail.com>"]

documentation = "https://docs.rs/colortemp/"
repository = "https://github.com/spacekookie/colortemp/"
readme = "README.md"

[package.metadata.release]
upload-doc = true
